Fixed the bookmark page with Giovanna's help. Form is div-centered, which is centered itself, and bottons are aligned, and movie list is in alphabetical order

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,3 +12,5 @@
   background: linear-gradient(#147EFF, #0F67DA);
   color: white;
 }
+
+$btn-white-space: nowrap
